[tool.poetry]
name = "personal finance tracker"
version = "0.1.0"
description = "A finance tracker that can store expense and income -- The app to can also view finances and also plot them"
authors = ["Osei Bismark"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
matplotlib = "^3.9.1"
pandas-stubs = "^2.2.2.240603"
mypy = "^1.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
